# kdtree-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: rust.yaml  update-baseline.yaml
baseline/bench_add_to_kdtree_with_1k_3d_points/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_nearest_from_kdtree_with_1k_3d_points/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_within_2k_data_01_radius/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_within_2k_data_02_radius/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_within_count_2k_data_01_radius/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_within_count_2k_data_02_radius/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_within_unsorted_2k_data_01_radius/base/: benchmark.json  estimates.json  sample.json  tukey.json
baseline/bench_within_unsorted_2k_data_02_radius/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/: bench.rs  bench_critrion.rs  ci.sh
src/: distance.rs  error.rs  heap_element.rs  kd_node.rs  kd_tree.rs  kdtree.rs  lib.rs  util.rs
tests/: __util__.rs  _util.rs  count_dist.rs  distance_call_count.rs  feature_nearest.rs  feature_within.rs  kd_node.rs  kd_tree.rs  kdtree.rs  query_bounding_box.rs  query_nearest.rs  query_within.rs  serde.rs  structure.rs  traversal.rs
