[package]
name = "kdtree"
version = "0.5.1"
authors = ["Rui Hu <code@mrhooray.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and lookup"
keywords = ["tree", "nearest", "dimension", "search", "geo"]
readme = "README.md"
repository = "https://github.com/mrhooray/kdtree-rs"
documentation = "https://docs.rs/kdtree"
license = "MIT OR Apache-2.0"

[dev-dependencies]
rand = "0.3.9"

[dependencies]
num-traits = "0.2"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[features]
serialize = ["serde", "serde_derive"]
