[package]
name = "kdtree"
version = "0.7.0"
authors = ["Rui Hu <code@mrhooray.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup"
keywords = ["tree", "nearest", "neighbor", "search", "geo"]
readme = "README.md"
repository = "https://github.com/mrhooray/kdtree-rs"
documentation = "https://docs.rs/kdtree"
license = "MIT OR Apache-2.0"

[dev-dependencies]
rand = "0.8.5"

[dependencies]
criterion = "0.5.1"
num-traits = "0.2"
thiserror = "2.0"

[[bench]]
name = "bench"
harness = false

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[features]
serialize = ["serde", "serde_derive"]
