[package]
name = "kdtree"
version = "0.8.0"
edition = "2024"
authors = ["Rui Hu <code@mrhooray.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup"
readme = "README.md"
documentation = "https://docs.rs/kdtree"
repository = "https://github.com/mrhooray/kdtree-rs"
license = "MIT OR Apache-2.0"
keywords = ["tree", "nearest", "neighbor", "search", "geo"]

[dependencies]
criterion = "0.7"
num-traits = "0.2"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
thiserror = "2.0"

[dev-dependencies]
kdtree = { path = ".", features = ["serialize"] }
rand = "0.9"
serde = "1.0"
serde_json = "1.0"

[features]
serialize = ["serde", "serde_derive"]

[[bench]]
name = "bench"
harness = false
